Fix sidebar shrinking on smaller screens

--- a/css/style.css
+++ b/css/style.css
@@ -35,9 +35,10 @@ main {
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-    width: 30vw;
+    width: max(350px, 30vw);
     position: relative;
     display: flex;
+    flex-shrink: 0;
     justify-content: center;
     align-items: flex-end;
 }
@@ -60,7 +61,6 @@ main {
 
 #logo-container img {
     display: flex;
-    max-width: 100%;
 }
 
 #sidebar-footer {
